# tkern

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  aarch64-target.json  aarch64-unknown-tkern.json  build.rs  deny.toml  linker.ld  readme.md  rust-toolchain.toml
.cargo/: config  config.toml  target.json
.github/: dependabot.yml
boot/: Cargo.toml  Makefile  README.md
docs/: build.md  schema.md
driver/bcm2837/: Cargo.toml
driver/bcm2837/pac/: Cargo.toml  _build.rs  bcm2837_lpa.svd
driver/bcm2837/src/emmc/: mod.rs
kernel/: Cargo.toml  aarch64-kernel.json  build_and_run.ps1  readme.md
kernel/.cargo/: config.toml
kernel/arch/aarch64/: Cargo.toml  boot.s  build.rs  os.json  readme.md
kernel/arch/aarch64/src/: main.rs
kernel/arch/common/: Cargo.toml
kernel/arch/common/src/: lib.rs
kernel/arch/x86_64/: .gitignore  Cargo.toml  expanded.rs  os.json  readme.md
kernel/arch/x86_64/src/: arch.rs  main.rs
kernel/arch/x86_64/src/render/: mod.rs
kernel/arch/x86_64/src/view/: config_table.rs  guid.rs  list.rs  mod.rs  proto_table.rs
kernel/docs/: .gitignore  README.md
kernel/libs/sys-aarch64/: Cargo.toml  link.ld
kernel/libs/sys-aarch64/src/: lib.rs
kernel/libs/sys-aarch64/src/driver/: mod.rs  time.rs
kernel/src/: lib.rs  macros.rs  main.rs
kernel/src/arch/aarch64/: boot.rs  boot.s
kernel/src/bsp/: dummy.rs  mod.rs  raspberrypi.rs
kernel/src/bsp/raspberrypi/: cpu.rs  impl_time.rs  uart_impl.rs
kernel/src/console/: mod.rs  uart.rs
kernel/src/driver/: mod.rs  time.rs
kernel/sys/aarch64/: Cargo.toml
kernel/sys/aarch64/src/: boot.s  lib.rs
kernel/sys/aarch64/src/driver/: uart.rs
kernel/sys/bcm2837/: Cargo.toml
kernel/sys/bcm2837/pac/: bcm2837_lpa.svd
kernel/sys/bcm2837/pac/src/: lib.rs
kernel/sys/bcm2837/src/emmc/: mod.rs
libs/: README.md
libs/allocator/: Cargo.toml
libs/allocator/src/: lib.rs
libs/atags/: Cargo.toml  README.md
libs/atags/src/: lib.rs
libs/bcm2837/: Cargo.toml
libs/bcm2837/pac/: Cargo.toml  README.md  _build.rs  generate.sh  svd2rust.toml
libs/bcm2837/pac/src/: aux.rs  bsc0.rs  cm_pcm.rs  emmc.rs  generic.rs  gpio.rs  lib.rs  lic.rs  pwm0.rs  spi0.rs  spi1.rs  systmr.rs  uart0.rs  uart1.rs  usb_otg_device.rs  usb_otg_global.rs  usb_otg_host.rs  usb_otg_pwrclk.rs  vcmailbox.rs
libs/bcm2837/pac/src/aux/: enables.rs  irq.rs
libs/bcm2837/pac/src/bsc0/: a.rs  c.rs  clkt.rs  del.rs  div.rs  fifo.rs  s.rs
libs/bcm2837/pac/src/cm_pcm/: cs.rs  div.rs
libs/bcm2837/pac/src/emmc/: arg1.rs  arg2.rs  blksizecnt.rs  boot_timeout.rs  cmdtm.rs  control0.rs  control1.rs  control2.rs  data.rs  dbg_sel.rs  exrdfifo_cfg.rs  exrdfifo_en.rs  force_irpt.rs  interrupt.rs  irpt_en.rs  irpt_mask.rs  resp0.rs  resp1.rs  resp2.rs  resp3.rs  slotisr_ver.rs  spi_int_spt.rs  status.rs  tune_step.rs  tune_steps_ddr.rs  tune_steps_std.rs
libs/bcm2837/pac/src/gpio/: extra_mux.rs  gpafen0.rs  gpafen1.rs  gparen0.rs  gparen1.rs  gpclr0.rs  gpclr1.rs  gpeds0.rs  gpeds1.rs  gpfen0.rs  gpfen1.rs  gpfsel0.rs  gpfsel1.rs  gpfsel2.rs  gpfsel3.rs  gpfsel4.rs  gpfsel5.rs  gphen0.rs  gphen1.rs  gpio_pup_pdn_cntrl_reg0.rs  gpio_pup_pdn_cntrl_reg1.rs  gpio_pup_pdn_cntrl_reg2.rs  gpio_pup_pdn_cntrl_reg3.rs  gplen0.rs  gplen1.rs  gpren0.rs  gpren1.rs  gpset0.rs  gpset1.rs
libs/bcm2837/pac/src/lic/: basic_pending.rs  disable_1.rs  disable_2.rs  disable_basic.rs  enable_1.rs  enable_2.rs  enable_basic.rs  fiq_control.rs  pending_1.rs  pending_2.rs
libs/bcm2837/pac/src/pwm0/: ctl.rs  dat1.rs  dat2.rs  dmac.rs  fif1.rs  rng1.rs  rng2.rs  sta.rs
libs/bcm2837/pac/src/spi0/: clk.rs  cs.rs  dc.rs  dlen.rs  fifo.rs  ltoh.rs
libs/bcm2837/pac/src/spi1/: cntl0.rs  cntl1.rs  io.rs  peek.rs  stat.rs  txhold.rs
libs/bcm2837/pac/src/systmr/: c0.rs  c1.rs  c2.rs  c3.rs  chi.rs  clo.rs  cs.rs
libs/bcm2837/pac/src/uart0/: cr.rs  dmacr.rs  dr.rs  ecr.rs  fbrd.rs  fr.rs  ibrd.rs  icr.rs  ifls.rs  imsc.rs  lcr_h.rs  mis.rs  ris.rs  rsr.rs
libs/bcm2837/pac/src/uart1/: baud.rs  baudh.rs  baudl.rs  cntl.rs  ier.rs  iir.rs  io.rs  lcr.rs  lsr.rs  mcr.rs  msr.rs  scratch.rs  stat.rs
libs/bcm2837/pac/src/usb_otg_device/: daintmsk.rs  dcfg.rs  dctl.rs  deachint.rs  deachintmsk.rs  diepeachmsk1.rs  diepempmsk.rs  diepmsk.rs  doepeachmsk1.rs  doepmsk.rs  dthrctl.rs  dvbusdis.rs  dvbuspulse.rs  in_endpoint.rs  out_endpoint.rs
libs/bcm2837/pac/src/usb_otg_device/in_endpoint/: diepctl0.rs  diepdma.rs  diepint.rs  dieptsiz.rs  dtxfsts.rs
libs/bcm2837/pac/src/usb_otg_device/out_endpoint/: doepctl.rs  doepdma.rs  doepint.rs  doeptsiz.rs
libs/bcm2837/pac/src/usb_otg_global/: cid.rs  dieptxf1.rs  dieptxf2.rs  dieptxf3.rs  dieptxf4.rs  dieptxf5.rs  dieptxf6.rs  dieptxf7.rs  gahbcfg.rs  gccfg.rs  gintmsk.rs  gintsts.rs  gnptxfsiz_host.rs  gotgctl.rs  gotgint.rs  grstctl.rs  grxfsiz.rs  gusbcfg.rs  hptxfsiz.rs  hw_config0.rs  hw_direction.rs  tx0fsiz_peripheral.rs
libs/bcm2837/pac/src/usb_otg_host/: haintmsk.rs  hcfg.rs  hfir.rs  host_channel.rs  hprt.rs  hptxsts.rs
libs/bcm2837/pac/src/usb_otg_host/host_channel/: hcchar.rs  hcdma.rs  hcint.rs  hcintmsk.rs  hcsplt.rs  hctsiz.rs
libs/bcm2837/pac/src/usb_otg_pwrclk/: pcgcctl.rs
libs/bcm2837/pac/src/vcmailbox/: config0.rs  config1.rs  peek0.rs  peek1.rs  sender0.rs  sender1.rs  status0.rs  status1.rs  write.rs
libs/bcm2837/src/: lib.rs  peripherals.rs  pins.rs  uart.rs  videocore.rs
libs/bcm2837/src/emmc/: mod.rs
libs/tkern_derive_utils/: Cargo.toml
libs/tkern_derive_utils/src/: lib.rs  reg_enum.rs
libs/videocore_mailbox/: Cargo.toml
libs/videocore_mailbox/src/: framebuffer.rs  lib.rs  mailbox.rs  peripherals.rs
libs/videocore_mailbox/src/mailbox/: items.rs
runner/: Cargo.toml  expanded.rs
runner/src/: cli_args.rs  kernel.rs  main.rs  prelude.rs
runner/src/commands/: build.rs  mod.rs  obj_dump.rs  run.rs
src/: allocator.rs  atag.rs  boot.s  bsp.rs  dev_utils.rs  interrupts.rs  lib.rs  logger.rs  macros.rs  main.rs  rust_internals.rs  sys.rs  test.rs  time.rs  (+1 more)
sys/derive/: Cargo.toml
sys/derive/src/: lib.rs  peripheral.rs
sys/derive/src/peripheral/: generate.rs  parse.rs
(+137 files in other folders)
