[workspace]
members = [
    "libs/allocator",
    "libs/atags",
    "libs/drivers",
    "libs/tkern_derive_utils",
    "libs/utils",
    "libs/videocore_mailbox"
]

[package]
name = "tkern"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
allocator = { path = "libs/allocator" }
cortex-a = "7.3.1"
tock-registers = "0.7.0"
tkern_derive_utils = { path = "libs/tkern_derive_utils" }
utils = { path = "libs/utils" }
custom_debug_derive = "0.5.0"
bytemuck = { version = "1.10.0", features = ["aarch64_simd"] }
atags = { path = "libs/atags" }
videocore_mailbox = { path = "libs/videocore_mailbox" }
bitflags = "1.3.2"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
