[workspace]
members = [
    "libs/allocator",
    "libs/atags",
    "libs/drivers",
    "libs/tkern_derive_utils",
    "libs/utils",
    "libs/videocore_mailbox"
]

[package]
name = "tkern"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
allocator = { path = "libs/allocator" }
cortex-a = { version = "8.0.0", default-features = false, features = ["nightly"] }
tock-registers = { version = "0.7.0", default-features = false }
tkern_derive_utils = { path = "libs/tkern_derive_utils" }
utils = { path = "libs/utils" }
custom_debug_derive = { version = "0.5.0", default-features = false }
bytemuck = { version = "1.10.0", features = ["aarch64_simd"], default-features = false }
atags = { path = "libs/atags" }
videocore_mailbox = { path = "libs/videocore_mailbox" }
bitflags = { version = "1.3.2", default-features = false }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
