[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
cortex-a = { version = "7.0" }
# dependent on cortex-a
tock-registers = { version = "0.7.x", default-features = false }
