[workspace]
members = [
	"libs/sys-aarch64/"
]

[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
driver = { path = "libs/driver" }

[target."cfg(target_arch = \"aarch64\")".dependencies]
sys-aarch64 = { path = "libs/sys-aarch64" }
