[package]
name = "bcm2837_hal"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcm2837_pac = { path = "pac" }
driver = { path = "../interface" }
log = { version = "0.4", default-features = false}
embedded-time = "0.12"
bitflags = { version = "1.3.2", default-features = false }
