[package]
name = "allocator"
version = "0.0.0"
authors = [ "Trangar <crates@trangar.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "1.3.2", default-features = false }
utils = { path = "../utils" }
