[package]
name = "allocator"
version = "0.0.0"
authors = ["Trangar <crates@trangar.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2.2.1", default-features = false }
utils = { path = "../utils" }

[dev-dependencies]
rand = "0.8.5"
