[package]
name = "bcm2837_hal"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcm2837_pac = { path = "pac" }
bitflags = { version = "1.3.2", default-features = false }
cortex-a = "7.2.0"
drivers = { path = "../drivers" }
embedded-time = "0.12"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
log = { version = "0.4", default-features = false}
paste = "1.0"
