[package]
name = "tkern_derive_utils"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.21", default-features = false }
proc-macro2 = { version = "1.0.47", default-features = false }

[dependencies.syn]
version = "1.0.102"
features = ["extra-traits"]
default-features = false
