[package]
name = "videocore_mailbox"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aligned = { version = "0.4.1", default-features = false }
bitfield = { version = "0.14.0", default-features = false }
cortex-a = { version = "8.1.1", default-features = false }
tkern_derive_utils = { path = "../tkern_derive_utils" }

[dependencies.bytemuck]
version = "1.12.3"
features = ["aarch64_simd"]
default-features = false

[dependencies.font8x8]
version = "0.3.1"
default-features = false
features = ["unicode"]

[dependencies.volatile]
version = "0.4.5"
default-features = false
features = ["unstable"]

[dev-dependencies]
memoffset = "0.7.1"
