[package]
name = "sys_derive"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "=1.0.38", default-features = false }
quote = { version = "=1.0.19", default-features = false }

[dependencies.syn]
version = "=1.0.94"
features = ["extra-traits", "parsing", "proc-macro", "derive", "printing"]
default-features = false
