cargo-features = ["per-package-target"]

[package]
name = "tkern_arch_x86_64"
version = "0.0.0"
edition = "2021"
publish = false
default-target = "x86_64-unknown-uefi"

[features]
qemu = ["dep:qemu-exit"]

[dependencies]
tkern_arch = { path = "../common" }
uefi = { version = "0.18", default-features = false, features = ["alloc"] }
uefi-services = { version = "0.15.0", default-features = false }
qemu-exit = { version = "3.0", optional = true }
